# ihrisplus

./: .gitignore  package-lock.json  pyproject.toml
ihrisplus/: __init__.py  client.py  config.py  database.py
ihrisplus/api/: __init__.py  resources.py  security.py
src/app/@core/data/: flask.service.ts
src/app/pages/dashboard/: dashboard.component.html  dashboard.component.ts
